--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.4.47",
+    "axios": "^1.7.7",
     "d3": "^7.9.0",
     "pinia": "^2.2.2",
     "roboto-fontface": "*",
