--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@mdi/font": "7.4.47",
     "axios": "^1.7.7",
     "d3": "^7.9.0",
+    "openai": "^4.86.1",
     "pinia": "^2.2.2",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
